apps/woodpantry/legal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: woodpantry-legal
  namespace: woodpantry
spec:
  selector:
    app: woodpantry-legal
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
